[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claudecode-py"
version = "0.1.0"
description = "A teaching-oriented Python coding agent CLI inspired by Claude Code"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "openai>=2.8.0",
  "rich>=13.7.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
claudecode = "claudecode.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
addopts = "-q"

[tool.setuptools.packages.find]
where = ["src"]
